2005-07-19  Wim Taymans  <wim@fluendo.com>

	* sys/oss/gstosssink.c: (gst_oss_sink_get_format),
	(gst_oss_sink_open):
	Parse spec to set correct oss values.

2005-07-19  Andy Wingo  <wingo@pobox.com>

	* ext/dv/gstdvdec.c (gst_dvdec_decode_video): Set the proper
	framerate on the outbound buffer.

	* ext/dv/gstdvdec.c (gst_dvdec_decode_video): Don't clobber
	alloc_buffer's return value.
	(gst_dvdec_decode_frame): Handle unlinked pads with grace and
	agility.

	* ext/dv/gstdvdec.h: Fix signedness error.

2005-07-19  Wim Taymans  <wim@fluendo.com>

	* ext/dv/gstdvdec.c: (gst_dvdec_init), (gst_dvdec_src_convert),
	(gst_dvdec_sink_convert), (gst_dvdec_get_src_query_types),
	(gst_dvdec_src_query), (gst_dvdec_get_sink_query_types),
	(gst_dvdec_sink_query), (gst_dvdec_send_event),
	(gst_dvdec_handle_sink_event), (gst_dvdec_handle_src_event),
	(gst_dvdec_decode_audio), (gst_dvdec_decode_video),
	(gst_dvdec_decode_frame), (gst_dvdec_flush), (gst_dvdec_chain):
	* ext/dv/gstdvdec.h:
	Implemented seeking in dvdec.

2005-07-19  Andy Wingo  <wingo@pobox.com>

	* ext/Makefile.am: Enable dvdev and raw1394src.

2005-07-18  Andy Wingo  <wingo@pobox.com>

	* configure.ac: Use AS_LIBTOOL_TAGS. Fix crap gettext commit
	comment.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_add_element),
	(gst_rtspsrc_play):
	Fix for core changes.

2005-07-18  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/mad/gstid3tag.c: (gst_id3_tag_sink_event):
	  When returning to NORMAL state after reading tags,
	  pass on the discont event.

2005-07-18  Wim Taymans  <wim@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_sink_event),
	(gst_rmdemux_change_state), (gst_rmdemux_chain),
	(gst_rmdemux_get_stream_by_id), (gst_rmdemux_send_event),
	(gst_rmdemux_add_stream):
	Send discont event before pushing first buffer.

2005-07-17  Philippe Khalaf <burger@speedy.org>

	* gst/fdsrc/gstfdsrc.c:
	Removed #include <gst_private.h>

2005-07-16  Philippe Khalaf <burger@speedy.org>